@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.194.2.41 2009/03/27 05:11:11 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.194.2.42 2009/03/28 20:11:06 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -365,8 +365,14 @@ boundary(struct curve_points *plots, int count)
 	label_width(axis_array[FIRST_Y_AXIS].label.text, &ylablin);
     if (axis_array[SECOND_Y_AXIS].label.text)
 	label_width(axis_array[SECOND_Y_AXIS].label.text, &y2lablin);
-    if (axis_array[FIRST_X_AXIS].ticmode)
+
+    if (axis_array[FIRST_X_AXIS].ticmode) {
 	label_width(axis_array[FIRST_X_AXIS].formatstring, &xticlin);
+	/* Reserve room for user tic labels even if format of autoticks is "" */
+	if (xticlin == 0 && axis_array[FIRST_X_AXIS].ticdef.def.user)
+	    xticlin = 1;
+    }
+
     if (axis_array[SECOND_X_AXIS].ticmode)
 	label_width(axis_array[SECOND_X_AXIS].formatstring, &x2ticlin);
     if (axis_array[FIRST_Y_AXIS].ticmode)
