@@ -1,3 +1,8 @@
+2009-03-28  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/graphics.c (boundary):  Reserve room for user tic labels even if
+	the format for autoticks is "".
+
 2009-03-26  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (boundary): Fix bug that caused the left/right margin
